--- a/src/styles.css
+++ b/src/styles.css
@@ -2,92 +2,133 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
 }
 
 body {
-    padding: 50px;
+    padding: 18px;
     background: #E6CC7E;
 }
 
-
-input {
-    /* flex-grow: inherit; */
-    border-radius: 8px;
-    border-color: #255e76;
-    padding: 10px;
-    width: 50%;
-    background: #e3e3de;
-    margin: 30px;
-    font-size: 1.2rem;
-    /* align-items: center; */
-    /* justify-content: center; */
-}
-
-button {
-    background: #3f809c;
-    color: rgb(255, 255, 255);
-    border-radius: 5px;
-    padding: 8px;
-    cursor: pointer;
-    margin: 10px;
-    margin-top: 20px;
-}
-
-
-/* Navbar
-
-.container {
-    display: flex;
-    background: #949494;
-    border-radius: 6px;    
-}
-
-.container a {
-    padding: 10px;
-    text-decoration: none;
-    color: #040404;
-    font-size: 30px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-} */
-
-
-
 /* Grid */
+
 .containerGrid {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     /*grid-template-columns: 1fr 1fr 1fr 1fr; con grid*/
-    margin-top: 8px;
+    margin-top: 10px;
+    justify-content: center;
 }
 
-img {
-   
-    image-resolution: 200px;
+.imgCard {
+    border-radius: 8px 8px 0 0;
+
+    width: 100%;
 }   
 
-.col {
+.col { /* Card */
     margin-bottom: 10px;
     margin-right: 15px;
     background: #ffffff;
-    border-color: 2px #010101;
-    image-resolution: 200px;
- 
+    position: relative; 
+    border: 2.5px solid  #357a97;
+    border-radius: 10px;
+    color: #010101;
 }
 
 .card-body {
     margin: 8px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
     min-width: 200px;
 }
 
+.badge-insignia-green {
+    background: green;
+    position: absolute; 
+    padding: 7px;
+    border-radius: 6px;
+    top: 15px;
+    right: 15px;
+    font-size: 17px;
+    color: #e3e3de;
+}
 
-/* paginacion */
-.pagination {
-    display: flex;
-    flex-direction: row;
-    justify-content: center; 
+.badge-insignia-red {
+    background: red;
+    position: absolute; 
+    padding: 7px;
+    border-radius: 6px;
+    top: 15px;
+    right: 15px;
+    font-size: 17px;
+    color: #e3e3de;
+}
+
+.badge-insignia-gray {
+    background: gray;
+    position: absolute; 
+    padding: 7px;
+    border-radius: 6px;
+    top: 15px;
+    right: 15px;
+    font-size: 17px;
+    color: #e3e3de;
 }
 
 
+/*  paginacion  */
+ .pagination {
+    display: flex;
+    flex-direction: row;
+    justify-content: center; 
+    list-style-type: none; /* quita los puntos de las listas*/
+} 
+
+.buttonNext {
+    border-radius: 7px;
+    padding: 8px;
+    cursor: pointer;
+    margin-top: 20px;
+    font-size: 16px;
+    
+}
+
+
+.buttonPrev {
+    border-radius: 7px;
+    padding: 8px;
+    cursor: pointer;
+    margin-top: 20px;
+    font-size: 16px;
+}
+
+
+ li {
+    cursor: pointer;
+    margin: 4px;
+    margin-top: 28px;
+    
+    background: #3f809c;
+    color: rgb(255, 255, 255);
+    border-radius: 3px;
+    padding: 6px;
+    cursor: pointer;
+    font-size: 15px;
+}  
+
+
+.activeBtn {
+    background: aqua;
+    padding: 6px;
+} 
+
+@media (max-width: 576) {
+    .buttonPrev,
+    .buttonNext {
+        display: none;
+    }
+
+    
+}
 
